# global-cluster

./: .gitignore  README.md  kind-config.yaml
apps/backend/: game_logic.py  main.py  models.py  pyproject.toml  requirements.txt
apps/backend/app/: dependencies.py  main.py  models.py  settings.py
apps/backend/app/routers/: auth.py  game.py
gitops/: applications.yaml
gitops/apps/: cassandra.yaml  k8ssandra-repo.yaml  k8ssandra.yaml  kafka.yaml  kustomization.yaml  strimzi.yaml
gitops/apps/cert-manager/: app.yaml
gitops/apps/k8ssandra/: app.yaml  kustomization.yaml
gitops/apps/k8ssandra/cluster/: dc1.yaml
gitops/apps/kafka/: kustomization.yaml
gitops/appsets/: kustomization.yaml  production.yaml
gitops/argocd/: applications.yaml
gitops/argocd/apps/: cert-manager.yaml  kafka.yaml
gitops/argocd/manifests/kafka/: cassandra-connector.yaml  kafka-connect.yaml  kustomization.yaml
gitops/base/apps/cert-manager/: kustomization.yaml
gitops/base/apps/otel/: instrumentation-python.yaml  kustomization.yaml
gitops/base/apps/signoz/: k8s-infra.yaml  signoz.yaml
gitops/base/sources/helm/: signoz.yaml
gitops/manifests/k8ssandra/: kustomization.yaml
gitops/manifests/kafka/: cassandra-connector.yaml  kafka-connect.yaml  kustomization.yaml
gitops/manifests/strimzi/: kustomization.yaml
iac/: .terraform.lock.hcl  argocd.tf  argocd.yaml  variables.tf  versions.tf
iac/terraform/global/: ec2.tf  outputs.tf  route53.tf  variables.tf  vpc.tf
iac/terragrunt/: env.hcl  root.hcl
iac/terragrunt/global/: terragrunt.hcl
(+5 files in other folders)
